--- a/package.json
+++ b/package.json
@@ -5,23 +5,28 @@
   "scripts": {
     "dev": "node server.js",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "analyze:browser": "BUNDLE_ANALYZE=browser next build"
   },
   "dependencies": {
     "@ant-design/icons": "^4.2.2",
+    "@zeit/next-bundle-analyzer": "^0.1.2",
     "@zeit/next-css": "^1.0.1",
     "@zeit/next-sass": "^1.0.1",
     "antd": "^4.6.5",
+    "atob": "^2.1.2",
     "axios": "^0.20.0",
     "babel-plugin-import": "^1.13.0",
     "babel-plugin-styled-components": "^1.11.1",
     "css-loader": "^4.3.0",
+    "github-markdown-css": "^4.0.0",
     "ioredis": "^4.17.3",
     "koa": "^2.13.0",
     "koa-body": "^4.2.0",
     "koa-router": "^9.4.0",
     "koa-session": "^6.1.0",
     "lru-cache": "^6.0.0",
+    "markdown-it": "^12.0.2",
     "moment": "^2.29.0",
     "next": "9.5.3",
     "node-sass": "^4.14.1",
